--- a/src/assets/toolkit/styles/_components.grids.scss
+++ b/src/assets/toolkit/styles/_components.grids.scss
@@ -25,7 +25,7 @@
 }//media $mobile
 
 
-@include media($desktop){
+@include media( $tablet-and-bigger ){
 
 
 // avoid omega resets like wildfire
